objects/Vosf_Question__c.object
<CustomObject>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Question that was used to create this cloned question</description>
        <label>Cloned From</label>
        <referenceTo>Vosf_Question__c</referenceTo>
        <relationshipName>Cloned_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment_Label__c</fullName>
        <description>This field defines the Comment Label Text to be shown for Rating Type Questions</description>
        <inlineHelpText>This field defines the Comment Label Text to be shown for Rating Type Questions</inlineHelpText>
        <label>Comment Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlling_Question_Column__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Controlling Question Column</label>
        <referenceTo>Vosf_Question_Column__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Controlling_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Controlling Question</label>
        <referenceTo>Vosf_Question__c</referenceTo>
        <relationshipName>Questions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Total_Validation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Total Validation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Vosf_Module__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Module</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Vosf_Module__c</referenceTo>
        <relationshipLabel>Questions (Module)</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Question</label>
        <referenceTo>Vosf_Question__c</referenceTo>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Category</label>
        <referenceTo>Vosf_Question_Category__c</referenceTo>
        <relationshipName>Question_Bank</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>Question Ext ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Question_Label__c</fullName>
        <label>Question Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Combobox</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Multiselect</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Table</fullName>
                </value>
                <value>
                    <fullName>TextArea</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Slider</fullName>
                </value>
                <value>
                    <fullName>Rating</fullName>
                </value>
                <value>
                    <fullName>Comment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_Child_Total__c</fullName>
        <label>Required Child Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Total__c</fullName>
        <label>Required Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scale__c</fullName>
        <description>This field decides the max value shown for the rating question</description>
        <inlineHelpText>This field decides the max value shown for the rating question</inlineHelpText>
        <label>Scale</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Module</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Vosf_Module__c.Parent_Module__c</field>
                <operation>equals</operation>
                <valueField>$Source.Module__c</valueField>
            </filterItems>
            <filterItems>
                <field>Vosf_Module__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Sub_Module</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Vosf_Module__c</referenceTo>
        <relationshipLabel>Questions (Sub-Module)</relationshipLabel>
        <relationshipName>Questions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <description>This field is for Rating type question only to know the threshold after which you want the comment box to appear.</description>
        <inlineHelpText>This field is for Rating type question only to know the threshold after which you want the comment box to appear.</inlineHelpText>
        <label>Threshold</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Sequence_Number__c</columns>
        <columns>NAME</columns>
        <columns>Parent_Question__c</columns>
        <columns>Controlling_Question__c</columns>
        <columns>Question_Label__c</columns>
        <columns>Question_Type__c</columns>
        <columns>Module__c</columns>
        <columns>Sub_Module__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Question_Bank</fullName>
        <columns>Module__c</columns>
        <columns>Sub_Module__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>NAME</columns>
        <columns>Question_Type__c</columns>
        <columns>IsRequired__c</columns>
        <columns>Parent_Question__c</columns>
        <columns>Controlling_Question__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Question__c</field>
            <operation>equals</operation>
        </filters>
        <label>Primary Questions</label>
    </listViews>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Type_IsNot_Editable</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( Question_Type__c ) &amp;&amp;  NOT(ISNEW() )</errorConditionFormula>
        <errorDisplayField>Question_Type__c</errorDisplayField>
        <errorMessage>you can not change question type.</errorMessage>
    </validationRules>
</CustomObject>